# privacy-track-colosseum-2026

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.claude/: settings.json
.claude/agents/: architecte.md  implementeur.md  qualite.md  securite.md  uiux-designer.md
.claude/hooks/: pretooluse-safeguard.sh
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/agents/: page.tsx
app/api/payments/: route.ts
app/api/services/: route.ts
app/api/services/[id]/: route.ts
app/components/: AgentCard.tsx  Navbar.tsx  ServiceCard.tsx  TryProtocol.tsx
app/dashboard/: page.tsx
app/services/: page.tsx
docs/: ARCHITECTURE.md  COMPETITIVE-ANALYSIS.md  DECISIONS.md  DEMO.md  PLAN.md  QUALITY-REPORT.md  REFERENCE_DOCUMENTATION_AUDIT.md  RESOURCES.md  SECURITY-AUDIT.md
programs/shadowpay/: Cargo.toml
programs/shadowpay/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
programs/shadowpay/src/instructions/: deregister_service.rs  register_agent.rs  register_service.rs  update_service.rs
programs/shadowpay/tests/: test_initialize.rs  test_registry.rs
scripts/: setup.sh
src/agent/: discovery.ts  runner.ts
src/payments/: client.ts  types.ts
src/per/: auth.ts  client.ts
src/program/: client.ts  idl.ts
tests/: x402-flow.test.ts
